# CppBundler

./: .gitignore  CMakeLists.txt  CppBundler.cpp  README.md
.github/workflows/: cmake-test.yml  release.yml
test/: CMakeLists.txt  expected_output.cpp
test/input/: bar.hpp  test.hpp
tests/: test.cpp
